// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null"
    disabled={false}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null"
    disabled={false}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button"
    modifier="beryllium"
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="k-Form-TextInputWithButton--button"
    modifier="beryllium"
    type="button"
  >
    <div
      className="sc-bxivhb biRwBS k-Loader k-Loader--noGap"
    >
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="#222"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null k-Form-TextInput--disabled"
    disabled={true}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button k-Form-TextInputWithButton--button__disabled"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null k-Form-TextInput--error"
    disabled={false}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button k-Form-TextInputWithButton--button__error"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
    value="foobar"
  />
  <button
    className="k-Form-TextInputWithButton--button"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with size prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--tiny"
    disabled={false}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-htpNat jFjLPT"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithButton--input k-Form-TextInput--andromeda k-Form-TextInput--null k-Form-TextInput--valid"
    disabled={false}
    name="text"
  />
  <button
    className="k-Form-TextInputWithButton--button k-Form-TextInputWithButton--button__valid"
    modifier="beryllium"
    type="button"
  >
    Button
  </button>
</div>
`;
